# HSE_MLOps

./: Dockerfile  README.md  docker-compose.yml  flask_api.py  main.py  minio_handler.py  models_handler.py  pyproject.toml  test.py  utils.py
